--- a/index.html
+++ b/index.html
@@ -4,47 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería de Textos con Privilegios de Admin</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 20px;
-        }
-        .gallery {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .post-container {
-            border: 2px solid #000;
-            padding: 10px;
-            margin: 10px;
-            width: 50%;
-            text-align: left;
-            position: relative;
-        }
-        .post-title {
-            font-weight: bold;
-            font-size: 18px;
-        }
-        .post-text {
-            margin-top: 10px;
-        }
-        .delete-btn {
-            position: absolute;
-            top: 5px;
-            right: 5px;
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 5px;
-            cursor: pointer;
-            display: none;
-        }
-        .post-container:hover .delete-btn {
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Galería de Textos</h1>
