--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galería de Publicaciones</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <h1>Galería de Publicaciones</h1>
+  <h1>Galería de Texto</h1>
 
   <div>
     <input type="text" id="titleInput" placeholder="Título">
