--- a/index.html
+++ b/index.html
@@ -4,35 +4,105 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galería de Publicaciones</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    h1 {
+      text-align: center;
+      color: #000;
+      margin-top: 20px;
+    }
+    .container {
+      width: 80%;
+      margin: 0 auto;
+      max-width: 900px;
+    }
+    .input-container {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
+    }
+    textarea, input[type="text"], input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+    button {
+      background-color: #000;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    button:hover {
+      background-color: #333;
+    }
+    #postList {
+      margin-top: 20px;
+    }
+    .post {
+      background-color: #fff;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      margin-bottom: 10px;
+    }
+    .deleteBtn {
+      background-color: #e74c3c;
+      color: #fff;
+      border: none;
+      padding: 5px 10px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 14px;
+      display: none;
+    }
+    .deleteBtn:hover {
+      background-color: #c0392b;
+    }
+    #adminPanel {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
   <h1>Galería de Texto</h1>
+  <div class="container">
+    <div class="input-container">
+      <input type="text" id="titleInput" placeholder="Título">
+      <textarea id="textInput" placeholder="Texto"></textarea>
+      <button id="addPostBtn">Añadir Publicación</button>
+    </div>
 
-  <div>
-    <input type="text" id="titleInput" placeholder="Título">
-    <textarea id="textInput" placeholder="Texto"></textarea>
-    <button id="addPostBtn">Añadir Publicación</button>
+    <div id="adminPanel">
+      <input type="password" id="adminPassword" placeholder="Contraseña de Administrador">
+      <button id="adminToggleBtn">Activar Modo Administrador</button>
+      <button id="purgeBtn" style="display:none;">Eliminar Todas las Publicaciones</button>
+    </div>
+
+    <div id="postList"></div>
   </div>
-
-  <div id="adminPanel" style="display:none;">
-    <input type="password" id="adminPassword" placeholder="Contraseña de Administrador">
-    <button id="adminToggleBtn">Activar Modo Administrador</button>
-    <button id="purgeBtn">Eliminar Todas las Publicaciones</button>
-  </div>
-
-  <div id="postList"></div>
 
   <!-- Import CryptoJS for MD5 hashing -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
   <!-- Firebase Setup -->
   <script type="module">
-    // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
     import { getDatabase, ref, push, onValue, remove } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-database.js";
 
-    // Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyCjVxYOmna_tyxGtbIKYS_wpYQJ1Vg6ws0",
       authDomain: "galeria-cetis58.firebaseapp.com",
@@ -44,27 +114,21 @@
       databaseURL: "https://galeria-cetis58-default-rtdb.firebaseio.com/"
     };
 
-    // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
-
-    // Reference to the "posts" node in the Realtime Database
     const postsRef = ref(db, 'posts');
 
-    // Add a new post
     const addPostBtn = document.getElementById('addPostBtn');
     addPostBtn.addEventListener('click', function() {
       const title = document.getElementById('titleInput').value.trim();
       const text = document.getElementById('textInput').value.trim();
 
       if (title && text) {
-        // Push new post to Realtime Database
         push(postsRef, {
           title: title,
           text: text
         });
 
-        // Clear input fields
         document.getElementById('titleInput').value = '';
         document.getElementById('textInput').value = '';
       } else {
@@ -72,31 +136,27 @@
       }
     });
 
-    // Display all posts
     const postList = document.getElementById('postList');
     onValue(postsRef, (snapshot) => {
-      postList.innerHTML = ''; // Clear the list before appending new data
+      postList.innerHTML = '';
       snapshot.forEach((childSnapshot) => {
         const post = childSnapshot.val();
         const postId = childSnapshot.key;
 
-        // Create a new post element
         const postElement = document.createElement('div');
+        postElement.className = 'post';
         postElement.innerHTML = `
           <h3>${post.title}</h3>
           <p>${post.text}</p>
-          <button class="deleteBtn" data-id="${postId}" style="display:none;">Eliminar</button>
+          <button class="deleteBtn" data-id="${postId}">Eliminar</button>
         `;
 
-        // Append the post to the list
         postList.appendChild(postElement);
 
-        // Add delete functionality if in admin mode
         const deleteBtn = postElement.querySelector('.deleteBtn');
         deleteBtn.addEventListener('click', function() {
           const enteredPassword = prompt('Introduce la contraseña para eliminar la publicación:');
           if (md5(enteredPassword) === '4be365797a14c860e0fdb46398a299ac') {
-            // Remove post from Realtime Database
             remove(ref(db, `posts/${postId}`));
           } else {
             alert('Contraseña incorrecta.');
@@ -105,31 +165,28 @@
       });
     });
 
-    // Toggle admin mode
     const adminToggleBtn = document.getElementById('adminToggleBtn');
     adminToggleBtn.addEventListener('click', function() {
-      const adminPanel = document.getElementById('adminPanel');
       const adminPassword = document.getElementById('adminPassword').value.trim();
       if (md5(adminPassword) === '4be365797a14c860e0fdb46398a299ac') {
-        adminPanel.style.display = 'block'; // Show admin panel
+        document.getElementById('adminPanel').style.display = 'block';
+        document.querySelectorAll('.deleteBtn').forEach(btn => btn.style.display = 'inline-block');
+        document.getElementById('purgeBtn').style.display = 'inline-block';
       } else {
         alert('Contraseña de administrador incorrecta.');
       }
     });
 
-    // Purge all posts
     const purgeBtn = document.getElementById('purgeBtn');
     purgeBtn.addEventListener('click', function() {
       const confirmation = prompt('¿Estás seguro? Escribe "ESTOY SEGURO" para confirmar.');
       if (confirmation === 'ESTOY SEGURO') {
-        // Remove all posts from Realtime Database
         postsRef.remove();
       } else {
         alert('Confirmación incorrecta. Operación cancelada.');
       }
     });
 
-    // MD5 hash function
     function md5(string) {
       return CryptoJS.MD5(string).toString();
     }
