--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     .toggle-content {
       cursor: pointer;
       position: absolute;
-      bottom: 5px;
-      left: 10px;
-      background-color: #fff;
-      padding: 2px 5px;
+      bottom: .35px;
+      left: 200px;
+      background-color: #ffffff;
+      padding: 1px 10px;
       border: none;
       font-size: 16px;
-      width: auto;
+      width: 50%;
     }
     .post-date {
       font-size: 0.8em;
