--- a/tabla.html
+++ b/tabla.html
@@ -13,7 +13,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galería de Publicaciones</title>
+  <title>Tabla</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -125,7 +125,8 @@
       </div>
     </div>
     
-    <h1>Galería de Publicaciones</h1>
+    <h1>Tabla</h1>
+    <button onclick="window.history.back();">Regresar</button> 
     <a href="https://lamalallama.github.io/polls.html">
       <button>Hacer Una Votación</button>
     </a>
