--- a/index.html
+++ b/index.html
@@ -319,5 +319,8 @@
       setInterval(checkChatInactivity, 60 * 60 * 1000); // 1 hour in milliseconds
       checkChatInactivity(); // Initial check
     </script>
+    <form action="https://lamalallama.github.io/tabla.html">
+        <input type="submit" value="Ir a Tablas" />
+    </form>
   </body>
 </html>
