--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     <div class="container">
       <h1>EL CHAT</h1>
       <div id="main-menu">
-        <a href="#" class="button" onclick="createChat()">Create Chat</a>
-        <a href="#" class="button" onclick="joinChat()">Join Chat</a>
+        <a href="#" class="button" onclick="createChat()">Crear Chat/a>
+        <a href="#" class="button" onclick="joinChat()">Unirse a Chat</a>
       </div>
 
       <!-- Create Chat Screen -->
@@ -326,6 +326,12 @@
       class="button"
     >
       Ir a Tabla
+    </button>
+    <button
+      onclick="window.location.href='https://lamalallama.github.io/admin.html'"
+      class="button"
+    >
+      Cosas Admin
     </button>
   </body>
 </html>
