--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="container">
       <h1>EL CHAT</h1>
       <div id="main-menu">
-        <a href="#" class="button" onclick="createChat()">Crear Chat/a>
+        <a href="#" class="button" onclick="createChat()">Crear Chat</a>
         <a href="#" class="button" onclick="joinChat()">Unirse a Chat</a>
       </div>
 
